# hero-harness

./: .env.example  .gitignore  AGENTS.md  CHECKPOINTS.md  CONTEXT.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE  README.md  harness-diagram.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: content_reviewer.md  griller.md  implementer.md  planner.md  researcher.md  reviewer.md  specifier.md  structurer.md
benchmark/tron_arena/: README.md  __main__.py  actions.py  bots.py  cli.py  engine.py  metrics.py  replay.py  tournament.py  visualize.py
commands/: brainstorm.md  caveman.md  checkpoint.md  context-audit.md  diagnose.md  grill-content.md  grill.md  harness-clean.md  implement-task.md  mission-align.md  plan-task.md  refine-harness.md  review-task.md  spec-task.md  write-a-skill.md  zoom-out.md
docs/design/: checkpoints.md  deterministic_check_registry.md
docs/research/: README.md  paper_01_agent_cybernetics.md  paper_02_agent_hospital.md  paper_03_ai_harness_engineering.md  paper_04_code_as_agent_harness.md  paper_05_continual_harness.md  paper_06_dspy.md  paper_07_effective_harness_algorithm_discovery.md  paper_08_inference_time_alignment.md  paper_09_reflexion.md  paper_10_textgrad.md  paper_11_voyager.md
prompts/: brainstorm-prompt.md  compact-prompt.md  consolidate-prompt.md  graph-instructions.md  grill-prompt.md  implement-burst-prompt.md  implement-prompt.md  plan-prompt.md  refiner-prompt.md  reimplement-prompt.md  report-full-prompt.md  report-plan-only-prompt.md  review-prompt.md  spec-prompt.md  structure-prompt.md
research_plan/: checkpoints.md  evidence_anchored_instruction_audit.md  mission_case_base.md  partial_harness_mode.md  refiner_post_mission.md  skill_library.md
src/: CLAUDE.md  cli.py
src/agent/: bash_executor.py  bash_policy.py  file_tools.py  loop.py  path_policy.py  search_tools.py  tool_schema.py  tools.py
src/analysis/: __init__.py  builder.py  code_graph.py  sqlite_graph.py
src/core/: block_state.py  context.py  gate.py  git.py  model_policy.py  notification.py  paths.py  state.py
src/harness/: case_base.py  harness_utils.py  phase_logger.py  project_memory.py  prompt_renderer.py  refiner.py  registry.py  skill_library.py  tasks.py  telemetry.py
src/integrations/: constants.py  notifier.py  telegram_api.py  telegram_commands.py  telegram_listener.py
src/mission/: burst_runner.py  hitl.py  human_input.py  phase_runner.py  reporting.py  runner.py  signals.py  task_executor.py
(+31 files in other folders)
